# flutter-rust-image

./: LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  live_effects.c
android/app/src/main/kotlin/com/amorn/rush_demo/: MainActivity.kt
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/benchmark/: benchmark_result.dart  dart_benchmark.dart  dart_blocking_benchmark.dart  image_benchmark.dart  live_effects_ffi.dart  method_channel_benchmark.dart  native_file_benchmark.dart  payload_benchmark.dart  peak_rss_sampler.dart  pixer_benchmark.dart  rust_optimized_benchmark.dart  slider_benchmark.dart
lib/screens/: benchmark_screen.dart  bridge_benchmark_screen.dart  camera_screen.dart  comparison_screen.dart  live_editor_screen.dart  showcase_dashboard_screen.dart  showcase_route.dart  showcase_solar_screen.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: image_pipeline.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: image_pipeline.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_rush_demo.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_rush_demo.podspec
rust_builder/windows/: CMakeLists.txt
shaders/: solar_system.frag
