[package]
name = "rust_lib_rush_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
anyhow = "1"
zune-jpeg = "0.4"
fast_image_resize = "5"
jpeg-encoder = "0.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
lto = true          # link-time optimization across crate boundaries
codegen-units = 1   # whole-crate optimization: slower build, faster code
